footer spacing fixes

--- a/main.css
+++ b/main.css
@@ -219,7 +219,7 @@ h3 {
 .card-link { 
     font-size: 14px;
     font-weight: 500;
-    padding-top: 10px;
+    margin-top: 10px;
 }
 
 .mini-icon {
